# prediction-market-analyses-

./: .gitignore  LICENSE  README.md  advanced_analysis.py  app.py  explore_schema.py  pyproject.toml  requirements.txt  rookie_analysis.py
analyses/: __init__.py  market_categories.py  platform_comparison.py  spread_liquidity.py  utils.py  whale_tracker.py
static/css/: style.css
static/data/: analyses.json
static/data/charts/: 10_whale_tracker.json  11_market_categories.json  12_spread_liquidity.json  1_dataset_overview.json  2_calibration_curve.json  3_longshot_bias.json  4_maker_vs_taker.json  5_trade_size_distribution.json  6_returns_by_hour.json  7_calibration_surface.json  8_monte_carlo_kelly.json  9_platform_comparison.json
static/js/: app.js
templates/: index.html
